Added Nunito font

--- a/Pear/Controllers/Onboarding/Get Started Flow/User Name Input/GetStartedYourNameViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/User Name Input/GetStartedYourNameViewController.storyboard
@@ -10,8 +10,8 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="SF-Pro-Display-Regular.otf">
-            <string>SFProDisplay-Regular</string>
+        <array key="Nunito-Regular.ttf">
+            <string>Nunito-Regular</string>
         </array>
     </customFonts>
     <scenes>
@@ -34,21 +34,14 @@
                                     <action selector="backButtonClicked:" destination="Nfk-kT-InT" eventType="touchUpInside" id="lPq-N6-Zed"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9s5-SB-Zym">
-                                <rect key="frame" x="278" y="41.5" width="77" height="37"/>
-                                <state key="normal" image="onboarding-next-button"/>
-                                <connections>
-                                    <action selector="nextButtonClicked:" destination="Nfk-kT-InT" eventType="touchUpInside" id="Zmu-c1-VtK"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey there!  What's your first name?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="wLx-As-bZM">
-                                <rect key="frame" x="50" y="100" width="275" height="33.5"/>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="28"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey there!  What's your first name?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="wLx-As-bZM">
+                                <rect key="frame" x="50" y="100" width="275" height="76.5"/>
+                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Jane Doe" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5TP-Gv-tsU">
-                                <rect key="frame" x="20" y="173.5" width="335" height="40"/>
+                                <rect key="frame" x="20" y="216.5" width="335" height="40"/>
                                 <color key="tintColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="06N-aF-XBb"/>
@@ -58,14 +51,14 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="name"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e16-WH-8Ul">
-                                <rect key="frame" x="0.0" y="212.5" width="375" height="1"/>
+                                <rect key="frame" x="0.0" y="255.5" width="375" height="1"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="EtY-Rb-IfH"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mNn-Sl-5vv">
-                                <rect key="frame" x="319" y="180.5" width="26" height="26"/>
+                                <rect key="frame" x="319" y="223.5" width="26" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="Lel-Rt-r4F"/>
                                     <constraint firstAttribute="width" constant="26" id="csi-s4-lFc"/>
@@ -75,16 +68,23 @@
                                     <action selector="clearButtonClicked:" destination="Nfk-kT-InT" eventType="touchUpInside" id="b9z-0G-TRh"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9s5-SB-Zym">
+                                <rect key="frame" x="149" y="430" width="77" height="37"/>
+                                <state key="normal" image="onboarding-next-button"/>
+                                <connections>
+                                    <action selector="nextButtonClicked:" destination="Nfk-kT-InT" eventType="touchUpInside" id="Zmu-c1-VtK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="9s5-SB-Zym" firstAttribute="centerX" secondItem="Fv4-2C-F9d" secondAttribute="centerX" id="2Ha-TW-ffw"/>
                             <constraint firstItem="e16-WH-8Ul" firstAttribute="width" secondItem="soc-Ow-m9Z" secondAttribute="width" id="4M7-UF-Y4d"/>
                             <constraint firstItem="wj4-Zf-gro" firstAttribute="top" secondItem="Fv4-2C-F9d" secondAttribute="top" constant="20" id="5F3-aV-iqb"/>
                             <constraint firstItem="wLx-As-bZM" firstAttribute="centerX" secondItem="Fv4-2C-F9d" secondAttribute="centerX" id="66M-9q-BKd"/>
+                            <constraint firstItem="Fv4-2C-F9d" firstAttribute="bottom" secondItem="9s5-SB-Zym" secondAttribute="bottom" constant="200" id="849-3J-BWh"/>
                             <constraint firstItem="wLx-As-bZM" firstAttribute="leading" secondItem="Fv4-2C-F9d" secondAttribute="leading" constant="50" id="CwK-Dm-skz"/>
                             <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="mNn-Sl-5vv" secondAttribute="trailing" constant="30" id="Gk3-v0-tu8"/>
-                            <constraint firstItem="9s5-SB-Zym" firstAttribute="centerY" secondItem="wj4-Zf-gro" secondAttribute="centerY" id="Jmq-cW-AE6"/>
-                            <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="9s5-SB-Zym" secondAttribute="trailing" constant="20" id="WcA-ih-bmL"/>
                             <constraint firstItem="e16-WH-8Ul" firstAttribute="centerX" secondItem="5TP-Gv-tsU" secondAttribute="centerX" id="WqC-dT-m1P"/>
                             <constraint firstItem="mNn-Sl-5vv" firstAttribute="centerY" secondItem="5TP-Gv-tsU" secondAttribute="centerY" id="bZs-1s-7v4"/>
                             <constraint firstItem="wj4-Zf-gro" firstAttribute="leading" secondItem="Fv4-2C-F9d" secondAttribute="leading" constant="20" id="e6g-Mn-pgR"/>
