--- a/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage2ViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage2ViewController.storyboard
@@ -8,6 +8,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="FredokaOne-Regular.ttf">
+            <string>FredokaOne-Regular</string>
+        </array>
+        <array key="SF-Pro-Display-Regular.otf">
+            <string>SFProDisplay-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Landing Screen Page2 View Controller-->
         <scene sceneID="lEd-WC-G4d">
@@ -21,40 +29,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-page-2-image" translatesAutoresizingMaskIntoConstraints="NO" id="a6m-dr-QZx">
-                                <rect key="frame" x="80" y="50" width="215" height="180"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-background-2" translatesAutoresizingMaskIntoConstraints="NO" id="F06-kP-JWE">
+                                <rect key="frame" x="0.0" y="-20" width="375" height="250"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="heb-mE-zU0"/>
+                                    <constraint firstAttribute="width" secondItem="F06-kP-JWE" secondAttribute="height" multiplier="3:2" id="S8H-7y-y9A"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="On Pear, profiles are written by people who know you best." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZ6-4J-Vnb">
-                                <rect key="frame" x="40" y="283" width="295" height="43"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-2" translatesAutoresizingMaskIntoConstraints="NO" id="a6m-dr-QZx">
+                                <rect key="frame" x="80" y="10" width="215" height="220"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="43" id="77h-4e-TkD"/>
+                                    <constraint firstAttribute="height" constant="220" id="heb-mE-zU0"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <nil key="textColor"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Discover people through the eyes of their friends" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZ6-4J-Vnb">
+                                <rect key="frame" x="40" y="290" width="295" height="53"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
+                                <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Discover others through the eyes of their friends" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vVC-Yx-AjV">
-                                <rect key="frame" x="40" y="224.5" width="295" height="50.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PEAR" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vVC-Yx-AjV">
+                                <rect key="frame" x="40" y="238" width="295" height="44"/>
+                                <fontDescription key="fontDescription" name="FredokaOne-Regular" family="Fredoka One" pointSize="36"/>
+                                <color key="textColor" red="0.26666666666666666" green="0.29411764705882354" blue="0.32941176470588235" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="a6m-dr-QZx" firstAttribute="centerX" secondItem="IGf-xm-3eN" secondAttribute="centerX" id="1S3-IU-feW"/>
+                            <constraint firstItem="F06-kP-JWE" firstAttribute="bottom" secondItem="a6m-dr-QZx" secondAttribute="bottom" id="H42-SA-oGE"/>
                             <constraint firstAttribute="trailing" secondItem="dZ6-4J-Vnb" secondAttribute="trailing" constant="40" id="SeQ-mg-aez"/>
-                            <constraint firstItem="a6m-dr-QZx" firstAttribute="centerY" secondItem="IGf-xm-3eN" secondAttribute="centerY" constant="-60" id="VPe-nH-Dh1"/>
+                            <constraint firstItem="a6m-dr-QZx" firstAttribute="centerY" secondItem="IGf-xm-3eN" secondAttribute="centerY" constant="-80" id="VPe-nH-Dh1"/>
                             <constraint firstItem="a6m-dr-QZx" firstAttribute="leading" secondItem="IGf-xm-3eN" secondAttribute="leading" constant="80" id="XVu-w5-UA3"/>
-                            <constraint firstItem="dad-2v-hPw" firstAttribute="top" secondItem="dZ6-4J-Vnb" secondAttribute="bottom" constant="40" id="dV5-4r-ptK"/>
+                            <constraint firstItem="vVC-Yx-AjV" firstAttribute="top" secondItem="a6m-dr-QZx" secondAttribute="bottom" constant="8" id="Zy3-Ma-h6S"/>
                             <constraint firstItem="vVC-Yx-AjV" firstAttribute="width" secondItem="dZ6-4J-Vnb" secondAttribute="width" id="gjF-B4-W0i"/>
                             <constraint firstItem="dZ6-4J-Vnb" firstAttribute="centerX" secondItem="IGf-xm-3eN" secondAttribute="centerX" id="hwL-Rg-H6b"/>
                             <constraint firstAttribute="trailing" secondItem="a6m-dr-QZx" secondAttribute="trailing" constant="80" id="jVp-pJ-9br"/>
                             <constraint firstItem="vVC-Yx-AjV" firstAttribute="centerX" secondItem="dZ6-4J-Vnb" secondAttribute="centerX" id="k21-ko-9GK"/>
                             <constraint firstItem="dZ6-4J-Vnb" firstAttribute="top" secondItem="vVC-Yx-AjV" secondAttribute="bottom" constant="8" id="nHv-oW-gjm"/>
+                            <constraint firstItem="F06-kP-JWE" firstAttribute="width" secondItem="IGf-xm-3eN" secondAttribute="width" id="nqR-nV-nRT"/>
+                            <constraint firstItem="F06-kP-JWE" firstAttribute="centerX" secondItem="IGf-xm-3eN" secondAttribute="centerX" id="zWX-M1-yob"/>
                             <constraint firstItem="dZ6-4J-Vnb" firstAttribute="leading" secondItem="IGf-xm-3eN" secondAttribute="leading" constant="40" id="zuP-PN-LJj"/>
                         </constraints>
                     </view>
@@ -69,6 +83,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-page-2-image" width="355.5" height="404"/>
+        <image name="landing-pear-2" width="220" height="220"/>
+        <image name="landing-pear-background-2" width="375" height="250"/>
     </resources>
 </document>
