--- a/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage3ViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage3ViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ScO-Vu-CJF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="CG7-52-gsL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -8,67 +8,83 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="FredokaOne-Regular.ttf">
+            <string>FredokaOne-Regular</string>
+        </array>
+        <array key="SF-Pro-Display-Regular.otf">
+            <string>SFProDisplay-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Landing Screen Page3 View Controller-->
-        <scene sceneID="daH-yd-G4G">
+        <scene sceneID="4Gz-oI-039">
             <objects>
-                <viewController id="ScO-Vu-CJF" customClass="LandingScreenPage3ViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="CG7-52-gsL" customClass="LandingScreenPage3ViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="OeP-Im-bcx"/>
-                        <viewControllerLayoutGuide type="bottom" id="t8x-vi-1iX"/>
+                        <viewControllerLayoutGuide type="top" id="XVu-JC-ahY"/>
+                        <viewControllerLayoutGuide type="bottom" id="YmQ-1N-GPe"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="bvG-MK-hzk">
+                    <view key="view" contentMode="scaleToFill" id="rPJ-eT-Q7M">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-page-3-image" translatesAutoresizingMaskIntoConstraints="NO" id="alK-a7-n2c">
-                                <rect key="frame" x="80" y="50" width="215" height="180"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-background-3" translatesAutoresizingMaskIntoConstraints="NO" id="WTp-Ni-Kz6">
+                                <rect key="frame" x="0.0" y="-20" width="375" height="250"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="X08-VL-2iD"/>
+                                    <constraint firstAttribute="width" secondItem="WTp-Ni-Kz6" secondAttribute="height" multiplier="3:2" id="Gd3-V3-Rmc"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Write profiles that lead to interesting, funny, and positive conversations - or more ;)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgU-9T-k6x">
-                                <rect key="frame" x="40" y="295" width="295" height="65"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-3" translatesAutoresizingMaskIntoConstraints="NO" id="0Dl-HP-AH0">
+                                <rect key="frame" x="80" y="10" width="215" height="220"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="65" id="d55-pW-Qiu"/>
+                                    <constraint firstAttribute="height" constant="220" id="N4g-cy-zda"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <nil key="textColor"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Help your friends stand out by making them profiles" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aYK-gP-OPQ">
+                                <rect key="frame" x="40" y="290" width="295" height="53"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
+                                <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Help your friend stand out!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i9a-fa-vad">
-                                <rect key="frame" x="40" y="261.5" width="295" height="25.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PEAR" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5s-FV-LAR">
+                                <rect key="frame" x="40" y="238" width="295" height="44"/>
+                                <fontDescription key="fontDescription" name="FredokaOne-Regular" family="Fredoka One" pointSize="36"/>
+                                <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="i9a-fa-vad" firstAttribute="width" secondItem="sgU-9T-k6x" secondAttribute="width" id="0Hk-vf-LdH"/>
-                            <constraint firstItem="alK-a7-n2c" firstAttribute="centerY" secondItem="bvG-MK-hzk" secondAttribute="centerY" constant="-60" id="14j-pA-CDs"/>
-                            <constraint firstAttribute="trailing" secondItem="sgU-9T-k6x" secondAttribute="trailing" constant="40" id="68f-8q-RC9"/>
-                            <constraint firstItem="t8x-vi-1iX" firstAttribute="top" secondItem="sgU-9T-k6x" secondAttribute="bottom" constant="40" id="IBA-OA-d1G"/>
-                            <constraint firstItem="sgU-9T-k6x" firstAttribute="centerX" secondItem="bvG-MK-hzk" secondAttribute="centerX" id="MFn-Er-CtB"/>
-                            <constraint firstAttribute="trailing" secondItem="alK-a7-n2c" secondAttribute="trailing" constant="80" id="VoH-Xd-XTN"/>
-                            <constraint firstItem="sgU-9T-k6x" firstAttribute="top" secondItem="i9a-fa-vad" secondAttribute="bottom" constant="8" id="WQ0-EO-eZ3"/>
-                            <constraint firstItem="sgU-9T-k6x" firstAttribute="leading" secondItem="bvG-MK-hzk" secondAttribute="leading" constant="40" id="aL0-LI-wUT"/>
-                            <constraint firstItem="alK-a7-n2c" firstAttribute="leading" secondItem="bvG-MK-hzk" secondAttribute="leading" constant="80" id="bwm-IB-wBy"/>
-                            <constraint firstItem="i9a-fa-vad" firstAttribute="centerX" secondItem="sgU-9T-k6x" secondAttribute="centerX" id="eG1-dm-xtB"/>
-                            <constraint firstItem="alK-a7-n2c" firstAttribute="centerX" secondItem="bvG-MK-hzk" secondAttribute="centerX" id="ebh-mn-Dsw"/>
+                            <constraint firstItem="WTp-Ni-Kz6" firstAttribute="centerX" secondItem="rPJ-eT-Q7M" secondAttribute="centerX" id="1z2-V4-lxU"/>
+                            <constraint firstItem="aYK-gP-OPQ" firstAttribute="centerX" secondItem="rPJ-eT-Q7M" secondAttribute="centerX" id="8Oc-1T-pRx"/>
+                            <constraint firstItem="WTp-Ni-Kz6" firstAttribute="bottom" secondItem="0Dl-HP-AH0" secondAttribute="bottom" id="9jT-81-7TI"/>
+                            <constraint firstItem="f5s-FV-LAR" firstAttribute="top" secondItem="0Dl-HP-AH0" secondAttribute="bottom" constant="8" id="A2t-45-Vzy"/>
+                            <constraint firstItem="0Dl-HP-AH0" firstAttribute="centerY" secondItem="rPJ-eT-Q7M" secondAttribute="centerY" constant="-80" id="D11-p0-gT8"/>
+                            <constraint firstItem="0Dl-HP-AH0" firstAttribute="centerX" secondItem="rPJ-eT-Q7M" secondAttribute="centerX" id="HWj-Sx-2Uj"/>
+                            <constraint firstItem="aYK-gP-OPQ" firstAttribute="leading" secondItem="rPJ-eT-Q7M" secondAttribute="leading" constant="40" id="X6Q-41-IEl"/>
+                            <constraint firstAttribute="trailing" secondItem="aYK-gP-OPQ" secondAttribute="trailing" constant="40" id="YL1-TV-Msp"/>
+                            <constraint firstItem="0Dl-HP-AH0" firstAttribute="leading" secondItem="rPJ-eT-Q7M" secondAttribute="leading" constant="80" id="bUm-oz-XZQ"/>
+                            <constraint firstItem="f5s-FV-LAR" firstAttribute="centerX" secondItem="aYK-gP-OPQ" secondAttribute="centerX" id="fcQ-Vx-eGr"/>
+                            <constraint firstItem="f5s-FV-LAR" firstAttribute="width" secondItem="aYK-gP-OPQ" secondAttribute="width" id="hah-RE-uR3"/>
+                            <constraint firstItem="WTp-Ni-Kz6" firstAttribute="width" secondItem="rPJ-eT-Q7M" secondAttribute="width" id="lh6-G0-1lY"/>
+                            <constraint firstAttribute="trailing" secondItem="0Dl-HP-AH0" secondAttribute="trailing" constant="80" id="xdP-Y6-yw7"/>
+                            <constraint firstItem="aYK-gP-OPQ" firstAttribute="top" secondItem="f5s-FV-LAR" secondAttribute="bottom" constant="8" id="z88-Wj-Umc"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="375" height="400"/>
                     <connections>
-                        <outlet property="imageView" destination="alK-a7-n2c" id="WVM-RV-DK6"/>
+                        <outlet property="backgroundImageView" destination="WTp-Ni-Kz6" id="CS2-ZN-KwA"/>
+                        <outlet property="imageView" destination="0Dl-HP-AH0" id="JhK-Ku-jbc"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="y2v-0a-w86" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DDW-3b-RaU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53.600000000000001" y="27.436281859070466"/>
+            <point key="canvasLocation" x="287" y="50"/>
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-page-3-image" width="337.5" height="387"/>
+        <image name="landing-pear-3" width="220" height="220"/>
+        <image name="landing-pear-background-3" width="375" height="250"/>
     </resources>
 </document>
