--- a/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage4ViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage4ViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bth-Rz-F4e">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WCE-ve-g7C">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -8,67 +8,82 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="FredokaOne-Regular.ttf">
+            <string>FredokaOne-Regular</string>
+        </array>
+        <array key="SF-Pro-Display-Regular.otf">
+            <string>SFProDisplay-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Landing Screen Page4 View Controller-->
-        <scene sceneID="oAW-6V-2yO">
+        <scene sceneID="SoZ-R7-k9m">
             <objects>
-                <viewController id="bth-Rz-F4e" customClass="LandingScreenPage4ViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="WCE-ve-g7C" customClass="LandingScreenPage4ViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="IlH-cL-Qhh"/>
-                        <viewControllerLayoutGuide type="bottom" id="beA-sZ-V6L"/>
+                        <viewControllerLayoutGuide type="top" id="2jC-Ph-Qw2"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZKF-nV-kIW"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="edC-nK-Vk5">
+                    <view key="view" contentMode="scaleToFill" id="cdb-ta-2be">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-page-4-image" translatesAutoresizingMaskIntoConstraints="NO" id="XLq-Qr-10g">
-                                <rect key="frame" x="80" y="50" width="215" height="180"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="532-gc-eQD">
+                                <rect key="frame" x="0.0" y="-20" width="375" height="250"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="PFS-Ag-V0j"/>
+                                    <constraint firstAttribute="width" secondItem="532-gc-eQD" secondAttribute="height" multiplier="3:2" id="fLG-8M-wP8"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Building a profile is fun and only takes a few minutes. You can send it to your friend to review." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DpO-ve-skm">
-                                <rect key="frame" x="40" y="295" width="295" height="65"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-4" translatesAutoresizingMaskIntoConstraints="NO" id="oit-d7-Vse">
+                                <rect key="frame" x="80" y="10" width="215" height="220"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="65" id="eno-OC-gmP"/>
+                                    <constraint firstAttribute="height" constant="220" id="kav-pl-1t7"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <nil key="textColor"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pear your friends with people you think they'll like" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0fU-uo-tEi">
+                                <rect key="frame" x="40" y="290" width="295" height="53"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
+                                <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's get going!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y11-Op-tpK">
-                                <rect key="frame" x="40" y="261.5" width="295" height="25.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PEAR" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GU0-V3-MX1">
+                                <rect key="frame" x="40" y="238" width="295" height="44"/>
+                                <fontDescription key="fontDescription" name="FredokaOne-Regular" family="Fredoka One" pointSize="36"/>
+                                <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="y11-Op-tpK" firstAttribute="width" secondItem="DpO-ve-skm" secondAttribute="width" id="4RT-s5-8SJ"/>
-                            <constraint firstItem="XLq-Qr-10g" firstAttribute="centerY" secondItem="edC-nK-Vk5" secondAttribute="centerY" constant="-60" id="60W-6n-UsQ"/>
-                            <constraint firstItem="DpO-ve-skm" firstAttribute="top" secondItem="y11-Op-tpK" secondAttribute="bottom" constant="8" id="66f-U4-iF1"/>
-                            <constraint firstItem="beA-sZ-V6L" firstAttribute="top" secondItem="DpO-ve-skm" secondAttribute="bottom" constant="40" id="6X8-gE-ezu"/>
-                            <constraint firstItem="DpO-ve-skm" firstAttribute="leading" secondItem="edC-nK-Vk5" secondAttribute="leading" constant="40" id="Nbk-cY-3Ka"/>
-                            <constraint firstItem="XLq-Qr-10g" firstAttribute="leading" secondItem="edC-nK-Vk5" secondAttribute="leading" constant="80" id="RZx-74-6je"/>
-                            <constraint firstItem="DpO-ve-skm" firstAttribute="centerX" secondItem="edC-nK-Vk5" secondAttribute="centerX" id="dBN-Mh-RzU"/>
-                            <constraint firstItem="XLq-Qr-10g" firstAttribute="centerX" secondItem="edC-nK-Vk5" secondAttribute="centerX" id="gMV-Qe-DQI"/>
-                            <constraint firstAttribute="trailing" secondItem="DpO-ve-skm" secondAttribute="trailing" constant="40" id="nmA-Y5-kyk"/>
-                            <constraint firstAttribute="trailing" secondItem="XLq-Qr-10g" secondAttribute="trailing" constant="80" id="p5d-QJ-GNY"/>
-                            <constraint firstItem="y11-Op-tpK" firstAttribute="centerX" secondItem="DpO-ve-skm" secondAttribute="centerX" id="r1p-KO-pcW"/>
+                            <constraint firstItem="GU0-V3-MX1" firstAttribute="top" secondItem="oit-d7-Vse" secondAttribute="bottom" constant="8" id="1Lq-7S-KuE"/>
+                            <constraint firstItem="oit-d7-Vse" firstAttribute="centerX" secondItem="cdb-ta-2be" secondAttribute="centerX" id="2fB-21-EF0"/>
+                            <constraint firstItem="GU0-V3-MX1" firstAttribute="centerX" secondItem="0fU-uo-tEi" secondAttribute="centerX" id="I1v-Jb-8JL"/>
+                            <constraint firstItem="oit-d7-Vse" firstAttribute="centerY" secondItem="cdb-ta-2be" secondAttribute="centerY" constant="-80" id="QlS-h7-K2J"/>
+                            <constraint firstItem="532-gc-eQD" firstAttribute="bottom" secondItem="oit-d7-Vse" secondAttribute="bottom" id="VoS-26-znt"/>
+                            <constraint firstItem="oit-d7-Vse" firstAttribute="leading" secondItem="cdb-ta-2be" secondAttribute="leading" constant="80" id="Wu5-je-agD"/>
+                            <constraint firstAttribute="trailing" secondItem="oit-d7-Vse" secondAttribute="trailing" constant="80" id="aW4-xl-ddK"/>
+                            <constraint firstItem="532-gc-eQD" firstAttribute="width" secondItem="cdb-ta-2be" secondAttribute="width" id="b6W-2C-QHt"/>
+                            <constraint firstItem="0fU-uo-tEi" firstAttribute="leading" secondItem="cdb-ta-2be" secondAttribute="leading" constant="40" id="beJ-nU-Pig"/>
+                            <constraint firstAttribute="trailing" secondItem="0fU-uo-tEi" secondAttribute="trailing" constant="40" id="bra-Js-kb6"/>
+                            <constraint firstItem="GU0-V3-MX1" firstAttribute="width" secondItem="0fU-uo-tEi" secondAttribute="width" id="qCE-gF-Nej"/>
+                            <constraint firstItem="532-gc-eQD" firstAttribute="centerX" secondItem="cdb-ta-2be" secondAttribute="centerX" id="sbx-5z-B9v"/>
+                            <constraint firstItem="0fU-uo-tEi" firstAttribute="top" secondItem="GU0-V3-MX1" secondAttribute="bottom" constant="8" id="sfC-JN-hoa"/>
+                            <constraint firstItem="0fU-uo-tEi" firstAttribute="centerX" secondItem="cdb-ta-2be" secondAttribute="centerX" id="xOg-oj-45O"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="375" height="400"/>
                     <connections>
-                        <outlet property="imageView" destination="XLq-Qr-10g" id="Z3c-xJ-n1c"/>
+                        <outlet property="backgroundImageView" destination="532-gc-eQD" id="P5B-Cm-TM6"/>
+                        <outlet property="imageView" destination="oit-d7-Vse" id="7LD-hf-WOp"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ayA-JA-HfR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q9b-Uu-eV6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53.600000000000001" y="27.436281859070466"/>
+            <point key="canvasLocation" x="287" y="50"/>
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-page-4-image" width="368" height="427.5"/>
+        <image name="landing-pear-4" width="220" height="220"/>
     </resources>
 </document>
